WEBAPP/QND41K8S/qnd41app100/backups/ClusterIssuer-do-lets/ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qnd41-app-ingress
  namespace: qnd41-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/router.entrypoints: websecure
    nginx.ingress.kubernetes.io/router.tls: "true"
    #kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/enable-cors: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
           more_set_headers 'Access-Control-Allow-Origin' '*';
           more_set_headers 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
           more_set_headers 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
           more_set_headers 'Access-Control-Max-Age' 1728000;
           more_set_headers 'Content-Type' 'text/plain; charset=utf-8';
           more_set_headers'Content-Length' 0;
           return 204;

spec:
  ingressClassName: nginx
  rules:
    - host: www.smartquail.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qnd41-pro
                port:
                  number: 80
  tls:
    - secretName: smartquail-io-secrets
      hosts:
        - www.smartquail.io
